--- a/styles.css
+++ b/styles.css
@@ -23,7 +23,7 @@ h1{
     display: flex;
     flex-wrap: wrap;
     align-items: center;
-    justify-content: flex-end;
+    justify-content: center;
 }
 .big-text{
     font-weight: bold;
